--- a/equipment/templates/equipment/equipment_stock.html
+++ b/equipment/templates/equipment/equipment_stock.html
@@ -42,4 +42,5 @@
 <script src="{% static 'js/datepicker/datepicker.js' %}"></script>
 <script src="{% static 'js/datatable/dataTable.js' %}"></script>
 <script src="{% static 'js/equipment/stock.js' %}"></script>
+<script src="{% static 'js/equipment/stockGotoDetail.js' %}"></script>
 {% endblock %}
